# knowrobIndigo

./: CMakeLists.txt  README  README.md  installation.bash  package.xml
owl/: catalog-v001.xml  semRoom_semantic_map.owl
prolog/: init.pl  my_reasoning_tools.pl
