<?xml version="1.0"?>
<package>
  <name>template_tutorial_semantic_env</name>
  <version>0.0.0</version>
  <description>This document is a template example for generating your our semantic map</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="karinne.ramirez@tum.de">Karinne Ramirez-Amaro</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>This file can only be used for the exercises on the lecture "Humanoid Cognitive Reasoning"</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/tutorial_semantic_env</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="karinne.ramirez@tum.de">Karinne Ramirez-Amaro</author> 


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>knowrob_actions</build_depend>
  <build_depend>knowrob_map_data</build_depend>
  <build_depend>knowrob_map_tools</build_depend>
	<build_depend>knowrob_common</build_depend>

	<run_depend>knowrob_common</run_depend>
  <run_depend>knowrob_actions</run_depend>
  <run_depend>knowrob_map_data</run_depend>
  <run_depend>knowrob_map_tools</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
